--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,7 @@ install:
 script:
   - npm test
 
-deploy:
-  provider: script
-  script: scripts/deploy_develop.sh
-  on:
-    branch: develop
+after_success:
+  - ember build --environment=production
+  - curl -T "dist/index.html" -u $FTP_USER:$FTP_PASSWORD ftp://5.100.228.185/www/staging/
+  - cd dist/assets ; for i in * ; do curl -T "$i" -u $FTP_USER:$FTP_PASSWORD ftp://5.100.228.185/www/staging/assets/$i ; done ; cd ../..
